--- a/app/index.html
+++ b/app/index.html
@@ -125,7 +125,7 @@
           <div class="col-xs-12 requests">
             <i class="icon-reserve_widget_icon_02"></i>
             <h5>Special Requests</h5>
-            <p>These are special requests that the user entered when submitting their request. This section should be hidden if no special requests were ntered. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh.</p>
+            <p class="special"></p>
           </div>
           
   
