Update to responsive.

--- a/app/index.html
+++ b/app/index.html
@@ -35,13 +35,13 @@
 
 
       <div class="row details">
-        <div class="col-xs-4 people">
+        <div class="col-xs-12 col-sm-4 people">
           <i class="icon-reserve_widget_icon_08"></i> <span>4 People</span>
         </div>
-        <div class="col-xs-4 date">
+        <div class="col-xs-12 col-sm-4 date">
           <i class="icon-reserve_widget_icon_09"></i> <span>Tues, Sep 30</span>
         </div>
-        <div class="col-xs-4 time">
+        <div class="col-xs-12 col-sm-4 time">
           <i class="icon-reserve_widget_icon_10"></i> <span>10:00PM</span>
         </div>
       </div>
