--- a/app/index.html
+++ b/app/index.html
@@ -96,7 +96,7 @@
         <div class="success hide">
           <div class="col-xs-12">
             <i class="icon-reserve_widget_icon_11"></i><br>
-            Thank you, Mike!<br>
+            Thank you, <span class="name"></span><br>
             Your reservation is confirmed.
           </div>
           
